Fix spacing issue

--- a/app/assets/stylesheets/group_member_listing.scss
+++ b/app/assets/stylesheets/group_member_listing.scss
@@ -7,13 +7,19 @@
   margin-bottom: 16px !important; // To override foundation's row class
   padding: 24px;
   @include ease-transition(0.5s);
+
+  .large-9 {
+    margin-left: -8px;
+  }
 }
+
 .listing-member-tile {
   margin-top: 8px !important; // To override foundation's row class
   margin-bottom: 8px !important; // To override foundation's row class
   padding: 8px;
   @include ease-transition(0.5s);
 }
+
 .listing-member-display img {
   object-fit: cover;
   height: 64px;
